--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@
 spring.output.ansi.enabled = NEVER
 
 # Logging
-logging.file.name = logs/starter.log
+logging.file.name = logs/media-sorter.log
 logging.level.root = INFO
 logging.level.at.corba = DEBUG
