--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # JAR settings
-group = 'at.corba'
+group = 'at.corba.tools'
 version = 0.1.1-SNAPSHOT
 
 # version numbers of plugins and dependencies
@@ -7,6 +7,7 @@ GRADLE_VERSION					= 7.6
 KOTLIN_VERSION					= 1.8.10
 SPRING_BOOT_VERSION				= 3.0.2
 SPRING_DEPENDENCY_VERSION       = 1.1.0
-GRADLE_VERSIONS_PLUGIN_VERSION	= 0.42.0
+GRADLE_VERSIONS_PLUGIN_VERSION	= 0.45.0
 LOGGING_VERSION                 = 3.0.5
 PICOCLI_VERSION                 = 4.7.1
+METADATA_VERSION                = 2.18.0
